Resolves: tdf#101137 handle empty elements in matrix concatenation

Change-Id: I2de90e1cdfc4f215f6d7c644e0ab74372a4c2639